[FIX] 소셜봇 생성시 이중으로 게시글 목록을 불러오는 로직을 단일화 처리